// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`v-text > should convert v-text to setText 1`] = `
"
  const n0 = t0()
  const x0 = _child(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(str.value)))
  return n0
"
`;

exports[`v-text > should raise error and ignore children when v-text is present 1`] = `
"
  const n0 = t0()
  const x0 = _child(n0)
  _renderEffect(() => _setText(x0, _toDisplayString(test)))
  return n0
"
`;

exports[`v-text > should raise error if has no expression 1`] = `
"
  const n0 = t0()
  return n0
"
`;
